--- a/.github/workflows/deploy-trunk.yml
+++ b/.github/workflows/deploy-trunk.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Deploy to server
       if: success()
       uses: easingthemes/ssh-deploy@v2.2.11
-      env:
+      with:
         # Remember this needs to be in PEM format, so make sure you aren't
         # using one of your old keys, Jeremy.
         # If you need a new key, use: ssh-keygen -m PEM -t rsa -b 4096
